--- a/exer0016/style.css
+++ b/exer0016/style.css
@@ -21,12 +21,14 @@ header {
 }
 
 header h1 {
+    color: white;
     text-align: center;
     margin-top: 70px;
     font-size: 10vh;
 }
 
 header p{
+    color: white;
     text-align: center;
     font-size: 3vh;
 }
